# marxs

./: .gitattributes  .gitignore  .mailmap  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  .zenodo.json  CHANGES.rst  CITATION  CITATION.cff  CODE_OF_CONDUCT.md  DESCRIPTION.rst  MANIFEST.in  README.md  README.rst  mysim_result.fits  pip-requirements  pip-requirements-doc  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml
docs/: Makefile  aliases.txt  conf.py  contributing.rst  conventions.rst  credits.rst  design.rst  examples.rst  index.rst  install.rst  licenses.rst  missions.rst  newopticalelements.rst  optics.rst  requirements.txt  results.rst  rtd-pip-requirements  run.rst  runexample.rst  runsims.rst  simulationoverview.rst  source.rst  support.rst  todecide.rst  todo.rst  utils.rst  visualization.rst
docs/_static/: chandra.x3d  ex_pol.x3d  notes.txt  subaperturing.x3d
docs/_templates/: layout.html
docs/design/: rowland.rst  tolerancing.rst  uncertainties.rst
docs/plots/: sketch_coords.py
docs/pyplots/: chandra_tolerancing.py  runexample.py  sourcespectrum.py  vis_pol.py  vis_subaperturing.py  wiggle_global.fits
examples/: HESSdesign.rdb  chandra.py  chandra_hess.py  grating_resolution.py  mlmirror.py  x-raysurveyor.py
marxs/: CITATION  __init__.py  _version.py  analysis.py  base.py  conftest.py  simulator.py  utils.py
marxs/analysis/: __init__.py  analysis.py  coords.py  gratings.py  plots.py  run_helpers.py
marxs/analysis/tests/: test_analysis.py  test_coords.py  test_grating.py
marxs/base/: __init__.py  base.py
marxs/base/test/: test_base.py
marxs/design/: __init__.py  bendgratings.py  rowland.py  tolerancing.py  uncertainties.py
marxs/design/test/: test_design.py  test_uncertainties.py
marxs/design/tests/: setup_package.py  test_design.py  test_tolerancing.py  test_uncertainties.py
marxs/math/: __init__.py  geometry.py  pluecker.py  polarization.py  random.py  rotations.py  utils.py
marxs/math/test/: test_rotation.py  test_utils.py
marxs/math/tests/: test_geometry.py  test_math.py  test_polarization.py  test_random.py  test_rotation.py  test_utils.py
marxs/missions/: chandra.py  chandra_hess.py
marxs/missions/AXIS/: AXIS.py
marxs/missions/arcus/: __init__.py  analyze_grid.py  arcus.py  arfrmf.py  boom.py  ccd.py  defaults.py  generate_rowland.py  load_csv.py  ralfgrating.py  spo.py  utils.py
marxs/missions/arcus/data/: osip_template.md
marxs/missions/arcus/tests/: test_analyzegrid.py  test_arfrmf.py  test_blaze.py  test_layout.py  test_orders.py
marxs/missions/athena/: athecat.py  spo.py
marxs/missions/athena/data/: lossterm.csv  xous.csv
marxs/missions/chandra/: __init__.py  acis.py  chandra.py  chandra_global.py  data.py  dither.py  fitsheaders.py  hess.py  hrma_py.py  setup_package.py
marxs/missions/chandra/test/: marx.par  sim_asol.fits  test_chandra.py
marxs/missions/chandra/tests/: marxasp.par  test_chandra.py  test_hetg.py  test_hrma.py
marxs/missions/lynx/: load_csv.py  lynx.py  mirror.py  ralfgrating.py
marxs/missions/mitsnl/: SiTransmission.csv  catgrating.py  setup_package.py  tolerances.py
marxs/missions/mitsnl/data/: SiTransmission.csv  Si_efficiency_5_7_widebars.ecsv
marxs/missions/mitsnl/tests/: grating_efficiency.csv  grating_efficiency_broken.csv  test_cat.py  test_tolerances.py
marxs/optics/: __init__.py  aperture.py  baffle.py  baffles.py  base.py  cdef.txt  detector.py  filter.py  grating.py  hrma.par  marx.py  marx_build.py  mirror.py  multiLayerMirror.py  polarization.py  scatter.py  setup_package.py
marxs/optics/data/: A12113.txt  A13164.txt  A14070B.txt  A14080B.txt  ALSpolarization.txt  testFile_mirror.txt
marxs/optics/docs/: A12113.txt  ALSpolarization2.txt
marxs/optics/test/: test_baffle.py  test_detector.py  test_filter.py  test_grating.py  test_interfacecomplience.py  test_marx.py  test_mirror.py  test_mlMirror.py  test_optics.py  test_scatter.py
marxs/optics/tests/: test_all_optics.py  test_apertures.py  test_baffle.py  test_base.py  test_detector.py  test_filter.py  test_grating.py  test_interfacecomplience.py  test_marx.py  test_mirror.py  test_mlMirror.py  test_optics.py  test_polarization.py  test_scatter.py
marxs/optics/tests/data/: ccd_redist_normal.ecsv
marxs/reduction/: __init__.py  lsfparm.py  ogip.py  osip.py
marxs/reduction/tests/: __init__.py  test_col_or_key.py  test_ogip.py  test_osip.py  test_rmf.py
marxs/simulator/: __init__.py  simulator.py
marxs/simulator/test/: test_parallel.py
marxs/simulator/tests/: test_parallel.py  test_simulator.py
marxs/source/: __init__.py  labSource.py  pointing.py  source.py
marxs/source/test/: test_farLabPointSource.py  test_labPointSource.py  test_source.py
marxs/source/tests/: test_farLabPointSource.py  test_labPointSource.py  test_pointing.py  test_source.py
marxs/test/: __init__.py  coveragerc  setup_package.py  test_analysis.py  test_base.py  test_simulator.py  test_src_mir_det.py
marxs/tests/: __init__.py  setup_package.py  test_analysis.py  test_base.py  test_general.py  test_simulator.py  test_src_mir_det.py  test_utils_in_rootdir.py
marxs/visualization/: __init__.py  mayavi.py  setup_package.py  threejs.py  threejsjson.py  utils.py  x3d.py
marxs/visualization/tests/: test_threejsjson.py  test_utils.py  test_x3d.py
marxs/visualization/threejs_files/: MARXSloader.js  ModifiedTorusBufferGeometry.js  jsonschema.json  loader.html
