[MARX]
# The local path to the marx source code and a compiled version goes here
# Careful: Compile as shared library or with -fPIC
# If left empty, the MARX C code is not going to be available
# See installation instruction for details
#srcdir =
#libdir =


# Examples could be
#srcdir = /melkor/d1/guenther/marx/dist/
#libdir = /melkor/d1/guenther/marx/installed/devPIC/lib/

srcdir = /Users/hamogu/code/dist/
libdir = /Users/hamogu/marx/devPIC/lib/

[metadata]
name = marxs
version = 1.2.dev
description = Multi Architecture Raytracer for X-ray satellites
long_description = MARXS (Multi-Architecture-Raytrace-Xraymission-Simulator) is a toolsuite to simulate the performance X-ray observatories. It is primarily aimed at astronomical X-ray satellites and sounding rocket payloads, but can be used to ray-trace experiments in the laboratory as well. MARXS performs Monte-Carlo ray-trace simulations from a source (astronomical or lab) through a collection of optical elements such as mirrors, baffles, and gratings to a detector.
author = MIT / H. M. Günther
author_email = hgunther@mit.edu
license = GPLv3+
url = http://marxs.readthedocs.io
edit_on_github = True
github_project = Chandra-marx/marxs
python_requires = ">=3.5"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
install_requires = numpy; transforms3d; astropy
zip_safe = False
use_2to3 = False

[options.entry_points]

[options.package_data]
#* = *.c
#{{ cookiecutter.module_name }} = data/*
#{{ cookiecutter.module_name }}.tests = coveragerc


[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
norecursedirs = "docs[\/]_build" "docs[\/]generated"
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pep8]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W293 - trailing whitespace
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
select = E101,W191,W291,W293,E111,E112,E113

